    - Add DEBCONF_PRIORITY note to powerpc boot message.
    - Add MacRISC3 & 4 to ofboot.b for compatibility with G4/G5 powerpcs
  * Mario Lang
    - Add new boot floppy flavour "speakup" which uses a speakup-enabled
      kernel version.
    - Update the access flavour to use the same kernel version as the
      speakup flavour.
    - Update the access_drivers common and i386 pkg-list.

 -- Joey Hess <joeyh@debian.org>  Thu, 13 Nov 2003 14:39:21 -0500

debian-installer (20031113) unstable; urgency=low

  * Joey Hess
    - Add new loop-modules to bootfloppy, hd-media.
    - Move input-modules from root floppy to bootfloppy, as the new
      rootskel-bootfloppy prompts for the user to hit enter.
    - Remove redundant usb-discover and usb-modules from root floppy;
      the boot floppy takes care of that.
    - Remove fat-modules and floppy-modules from the root floppy; they
      boot floppy loads them.
    - Create DEST before copying in DEST_KERNEL.
    - ia64 build-depends on dosfstools. Closes: #219919
    - sparc build-depends on genromfs. Closes: #220208
    - remove brltty from everything except access. It is causing problems
      (#219928) on sparc at least.
    - add nic-extra-modules to netboot for i386, as it fits and netboot
      should support as much as it can
    - try to get full UTF-8 going on netboot
    - add nano to netboot
  * Richard Hirst
    - Add mtools as a build-dep for ia64

 -- Joey Hess <joeyh@debian.org>  Sun,  9 Nov 2003 19:59:13 -0500

debian-installer (20031109) unstable; urgency=low

  * Richard Hirst
    - Remove efi-reader from ia64 cdrom pkglist for now; the one in the
      archive is linked against libdebian-installer3 which is no longer
      available.
    - Stop including debootstrap-udeb in cdrom pkg-list for ia64.

 -- Joey Hess <joeyh@debian.org>  Fri, 07 Nov 2003 22:31:07 +0000

debian-installer (20031106.1) unstable; urgency=low

  * Enable ia64 in control file. (Build report from Jeff Bailey)