@@ -73,6 +73,10 @@ debian-installer (20031208) UNRELEASED; urgency=low
     - Update the access flavour to use the same kernel version as the
       speakup flavour.
     - Update the access_drivers common and i386 pkg-list.
+  * Thiemo Seufer
+    - Sanitize tftpboot.sh. It aborts now on errors and won't move/copy
+      files around without good reason. Changed mipsel image generation
+      to t-rex.
 
  -- Joey Hess <joeyh@debian.org>  Thu, 13 Nov 2003 14:39:21 -0500
 
